introduce lombok in model and support datatype map and language map