@@ -1,6 +1,5 @@
 package com.taxonic.carml.model.impl;
 
-import com.google.common.collect.ImmutableSet;
 import com.taxonic.carml.rdfmapper.TypeDecider;
 import com.taxonic.carml.vocab.Rdf.Rr;
 import java.lang.reflect.Type;
@@ -13,9 +12,8 @@ public class ObjectMapTypeDecider implements TypeDecider {
   @Override
   public Set<Type> decide(Model model, Resource resource) {
     if (model.contains(resource, Rr.parentTriplesMap, null)) {
-      return ImmutableSet.of(CarmlRefObjectMap.class);
+      return Set.of(CarmlRefObjectMap.class);
     }
-    return ImmutableSet.of(CarmlObjectMap.class);
+    return Set.of(CarmlObjectMap.class);
   }
-
 }
